New styling using tailwind
Thanks Kevin for the suggestion!

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.next:disabled {
+    background: #e65;
+}
+
+.next:not(:disabled) {
+    background: #6e5;
+}
