--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+a {
+    @apply text-blue-500 underline;
+}
+
+a:hover {
+    @apply text-blue-700;
+}
+
 .next:disabled {
     background: #e65;
 }
